re PR c/9177 (-fdump-translation-unit: C front end deletes function_decl AST nodes and breaks debugging dumps.)

PR c/9177
	* c-decl.c (c_expand_body): Don't garbage collect the function
	body if we are going to dump it later.

From-SVN: r65787