gcc/c-decl.c
@@ -6244,7 +6244,8 @@ finish_function (nested, can_defer_p)
 
       c_expand_body (fndecl);
 
-      if (uninlinable)
+      /* Keep the function body if it's needed for inlining or dumping.  */
+      if (uninlinable && !dump_enabled_p (TDI_all))
 	{
 	  /* Allow the body of the function to be garbage collected.  */
 	  DECL_SAVED_TREE (fndecl) = NULL_TREE;
